fixed subnav for press page on mobile/tablet

--- a/app/scss/components/_subnav.scss
+++ b/app/scss/components/_subnav.scss
@@ -21,6 +21,7 @@
 
     @include breakpoint(lg-tablet) {
       justify-content: center;
+      padding: 0.75rem 1rem;
     }
   }
 
@@ -35,6 +36,10 @@
 
     @include breakpoint(sm-tablet) {
       gap: 0.25rem;
+    }
+
+    li {
+      text-wrap: nowrap;
     }
   }
 
